--- a/ArsaRExCH/Components/Account/Pages/Register.razor
+++ b/ArsaRExCH/Components/Account/Pages/Register.razor
@@ -14,7 +14,7 @@
 @inject ILogger<Register> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
-
+@inject ArsaRExCH.Interface.WalletInterface _face
 <PageTitle>Register</PageTitle>
 
 
@@ -81,6 +81,10 @@
         Logger.LogInformation("User created a new account with password.");
 
         var userId = await UserManager.GetUserIdAsync(user);
+
+       await _face.CreateETHWallet(userId);
+
+
         var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
         code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
         var callbackUrl = NavigationManager.GetUriWithQueryParameters(
