--- a/ArsaRExCH/Components/Layout/NavMenu.razor
+++ b/ArsaRExCH/Components/Layout/NavMenu.razor
@@ -10,21 +10,23 @@
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div style="background-color:white" class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink style="background-color:yellow;color:black" class="nav-link" href="/" Match="NavLinkMatch.All"
+                     onmouseover="this.style.backgroundColor='red';" onmouseout="this.style.backgroundColor='yellow';">
+
+                <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Account/Manage">
+                    <NavLink style="background-color:yellow;color:black" class="nav-link" href="Account/Manage" onmouseover="this.style.backgroundColor='red';" onmouseout="this.style.backgroundColor='yellow';">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
+                <div class="nav-item px-3"  >
                     <form action="Account/Logout" method="post">
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
