--- a/ArsaRExCH/Components/Layout/NavMenu.razor
+++ b/ArsaRExCH/Components/Layout/NavMenu.razor
@@ -10,19 +10,13 @@
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div style="background-color:white" class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div style="background-color:black" class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink style="background-color:yellow;color:black" class="nav-link" href="/" Match="NavLinkMatch.All"
-                     onmouseover="this.style.backgroundColor='red';" onmouseout="this.style.backgroundColor='yellow';">
-
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+     
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink style="background-color:yellow;color:black" class="nav-link" href="Account/Manage" onmouseover="this.style.backgroundColor='red';" onmouseout="this.style.backgroundColor='yellow';">
+                    <NavLink style="background-color:black;color:white" class="nav-link" href="Account/Manage">
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
                 </div>
