--- a/ArsaRExCH/wwwroot/app.css
+++ b/ArsaRExCH/wwwroot/app.css
@@ -49,3 +49,7 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+/* Custom striped table styles */
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fff9e6; /* Light yellow color */
+}
