--- a/ArsaRExCH.Client/Pages/LoadWallets.razor
+++ b/ArsaRExCH.Client/Pages/LoadWallets.razor
@@ -23,10 +23,11 @@ else
         <table class="table table-striped table-hover table-bordered">
             <thead class="thead-dark">
                 <tr>
-                    <th>Pair Name</th>
+                    <th>Currency</th>
                     <th>Address</th>
                     <th>Current Balance</th>
                     <th>Amount</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +36,10 @@ else
                     <tr>
                         <td>@wallet.PairName</td>
                         <td>@wallet.Adress</td>
+                        <td>
+                            <a href="/Whitdraw">Withdraw</a>
+                            <a href="/Deposit">Deposit</a>
+                        </td>
                         <td>@wallet.CurrentBalance</td>
                         <td>@wallet.Amount</td>
                     </tr>
@@ -44,8 +49,8 @@ else
     </div>
 }
 @code {
-    private List<WalletDTO> wallets { get; set; } = new List<WalletDTO>();
-    public string user2 { get; set; }
+    private List<WalletDTO>? wallets { get; set; } = new List<WalletDTO>();
+    public string? user2 { get; set; }
     protected override async Task OnInitializedAsync()
     {
         // Check if the user is logged in and fetch their information
