--- a/ArsaRExCH.Client/Pages/LoadWallets.razor
+++ b/ArsaRExCH.Client/Pages/LoadWallets.razor
@@ -7,7 +7,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @using System.Text.Json
-
+@attribute [Authorize]
 
 @if (wallets == null)
 {
