--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -8,9 +8,9 @@
     <main>
         <div class="top-row px-4">
             <a href="LoadWallet" >Wallet</a>
-
+            <a href="AddMoneyBank">Add Money (Bank)</a>
         </div>
-
+  
         <article class="content px-4">
             @Body
         </article>
