--- a/ArsaRExCH/Components/Account/Pages/Register.razor
+++ b/ArsaRExCH/Components/Account/Pages/Register.razor
@@ -81,10 +81,17 @@
         Logger.LogInformation("User created a new account with password.");
 
         var userId = await UserManager.GetUserIdAsync(user);
-
         await _face.CreateETHWallet(userId);
         await _face.CreateBNBWallet(userId);
         await _face.CreateBTCWallet(userId);
+
+        /*Here i need check pair endpoint to see available pairs in website and make for each a new 
+         * wallet.The endpoint return Array od name and network name whciih we need 
+         * to make new wallet .
+         */
+
+        await _face.CheckAndCreateWallets(userId);
+
         var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
         code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
         var callbackUrl = NavigationManager.GetUriWithQueryParameters(
