--- a/ArsaRExCH/Components/Layout/NavMenu.razor
+++ b/ArsaRExCH/Components/Layout/NavMenu.razor
@@ -2,25 +2,24 @@
 
 @inject NavigationManager NavigationManager
 
-<div class="top-row ps-3 navbar navbar-dark" style="background-color: lightgray;">
+<div class="top-row ps-3 navbar navbar-dark" style="background-color: yellow    ;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ArsaRExCH</a>
+        <a style="color:black" class="navbar-brand" href="">ArsaRExCH</a>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div style="background-color:black" class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+<div style="background-color:white" class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-     
+
         <AuthorizeView>
             <Authorized>
-                <div class="nav-item px-3">
-                    <NavLink style="background-color:black;color:white" class="nav-link" href="Account/Manage">
-                        <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
+
+                <NavLink class="nav-link" href="Account/Manage" style="background-color:red">
+                    <span style="background-color:red" class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
-                </div>
-                <div class="nav-item px-3"  >
+
+                <div class="nav-item px-3" style="background-color:black">
                     <form action="Account/Logout" method="post">
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
@@ -32,19 +31,19 @@
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Account/Register">
+            <NavLink class="nav-link" href="Account/Register" style="background-color:black">
                         <span class="bi bi-person-nav-menu" aria-hidden="true"></span> Register
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Account/Login">
+                         <NavLink class="nav-link" href="Account/Login" style="background-color:red">
                         <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
                     </NavLink>
                 </div>
             </NotAuthorized>
         </AuthorizeView>
-    </nav>
-</div>
+        </nav>
+        </div>
 
 @code {
     private string? currentUrl;
