--- a/ArsaRExCH/Components/Layout/NavMenu.razor
+++ b/ArsaRExCH/Components/Layout/NavMenu.razor
@@ -2,10 +2,11 @@
 
 @inject NavigationManager NavigationManager
 
-<div class="top-row ps-3 navbar navbar-dark" style="background-color: yellow    ;">
+<div class="top-row ps-3 navbar navbar-dark" style="background-color:	#F8F8F8">
     <div class="container-fluid">
-        <a style="color:black" class="navbar-brand" href="">ArsaRExCH</a>
+        <a style="font-family: 'Lucida Console', 'Courier New', monospace; color: black;" class="navbar-brand" href="">ArsaRExCH</a>
     </div>
+
 </div>
 
 
@@ -14,16 +15,16 @@
 
         <AuthorizeView>
             <Authorized>
-
-                <NavLink class="nav-link" href="Account/Manage" style="background-color:red">
+                <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Account/Manage" style="background-color:black">
                     <span style="background-color:red" class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
-                    </NavLink>
-
-                <div class="nav-item px-3" style="background-color:black">
+                </NavLink>
+                </div>
+                <div class="nav-item px-3" style="background-color:white">
                     <form action="Account/Logout" method="post">
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                        <button type="submit" class="nav-link">
+                        <button type="submit" class="nav-link" style="background-color:red">
                             <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
                         </button>
                     </form>
@@ -31,19 +32,19 @@
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Account/Register" style="background-color:black">
+                    <NavLink class="nav-link" href="Account/Register" style="background-color:black">
                         <span class="bi bi-person-nav-menu" aria-hidden="true"></span> Register
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                         <NavLink class="nav-link" href="Account/Login" style="background-color:red">
+                    <NavLink class="nav-link" href="Account/Login" style="background-color:red">
                         <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
                     </NavLink>
                 </div>
             </NotAuthorized>
         </AuthorizeView>
-        </nav>
-        </div>
+    </nav>
+</div>
 
 @code {
     private string? currentUrl;
