--- a/ArsaRExCH/Components/Account/Pages/Register.razor
+++ b/ArsaRExCH/Components/Account/Pages/Register.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ArsaRExCH.Data
+@using ArsaRExCH.DTOs
+@using System.Net
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
@@ -45,11 +47,11 @@
             <button type="submit" class="w-100 btn btn-lg btn-warning">Register</button>
         </EditForm>
     </div>
-  <!---  <div class="col-md-6 col-md-offset-2">
-        <section>
-            <ExternalLoginPicker />
-        </section>
-    </div>-->
+    <!---  <div class="col-md-6 col-md-offset-2">
+          <section>
+              <ExternalLoginPicker />
+          </section>
+      </div>-->
 </div>
 
 @code {
@@ -81,12 +83,12 @@
         Logger.LogInformation("User created a new account with password.");
 
         var userId = await UserManager.GetUserIdAsync(user);
-       //await _face.CreateETHWallet(userId,"ETH");
-       // await _face.CreateBNBWallet(userId,"BNB");
-      //  await _face.CreateBTCWallet(userId,"BTC");
+        //await _face.CreateETHWallet(userId,"ETH");
+        // await _face.CreateBNBWallet(userId,"BNB");
+        //  await _face.CreateBTCWallet(userId,"BTC");
 
-        /*Here i need check pair endpoint to see available pairs in website and make for each a new 
-         * wallet.The endpoint return Array od name and network name whciih we need 
+        /*Here i need check pair endpoint to see available pairs in website and make for each a new
+         * wallet.The endpoint return Array od name and network name whciih we need
          * to make new wallet .
          */
 
@@ -97,9 +99,17 @@
         var callbackUrl = NavigationManager.GetUriWithQueryParameters(
             NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
             new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
+        string decodedUrl = WebUtility.HtmlDecode(callbackUrl);
+        await EmailSender.SendConfirmationLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
 
-      //  await EmailSender.SendConfirmationLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
+        EmailRequest request = new EmailRequest();
+        {
+            request.Email = Input.Email;
+            request.HtmlMessage = decodedUrl;
+            request.Subject = "Please Verify Your Email By Clicking On Link";
+        };
 
+        await _face.SendEmailAsync(request);
         if (UserManager.Options.SignIn.RequireConfirmedAccount)
         {
             RedirectManager.RedirectTo(
