Add some text inhome

--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -7,3 +7,11 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @inject ArsaRExCH.Interface.WalletInterface _face
+
+
+<h3>Welcome To ArsaRExchange & Casino </h3>
+<p>Here is Bet System om Bitcoin Volatility , The System is designed to guess Bitcoin Price
+</p><br />
+<p>You will geuss Bitcoin price ANd bet on That , You will say on which date and time that bitcoin 
+    price will happens
+</p>
