deposit page added

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -8,7 +8,9 @@
     <main>
         <div class="top-row px-4">
             <a href="LoadWallet" >Wallet</a>
-            <a href="AddMoneyBank">Add Money (Bank)</a>
+            <a href="AddMoneyBank">Deposit Money</a>
+            <a href="AddMoneyBank">Deposit Crypto</a>
+
 
         </div>
   
