--- a/ArsaRExCH.Client/Pages/ForceBet.razor
+++ b/ArsaRExCH.Client/Pages/ForceBet.razor
@@ -17,41 +17,43 @@
     <DataAnnotationsValidator />
     <ValidationSummary />
 
-    <div class="form-container" style="display: flex; flex-wrap: wrap; gap: 10px; align-items: center;border:dashed 1px red;width:100%">
- 
-
-        <div class="form-group" style="width: 10%;">
+    <div class="form-container" style="display: inline-flex; flex-wrap: wrap; gap: 10px; align-items: center; border: dashed 1px black;width:auto">
+        <div class="form-group" style="width: auto;">
             <label for="btcPriceExpireBet">BTC Price Expire Bet</label>
             <InputNumber @bind-Value="BetModel.BtcPriceExpireBet" id="btcPriceExpireBet" class="form-control form-control-sm" />
         </div>
 
-        <div class="form-group" style="width: 10%;">
+        <div class="form-group" style="width: auto;">
             <label for="hitDateBTC">Hit Date BTC</label>
             <InputDate @bind-Value="BetModel.HitDateBTC" id="hitDateBTC" class="form-control form-control-sm" />
         </div>
 
-        <div class="form-group" style="width: 10%;">
+        <div class="form-group" style="width: auto">
             <label for="betAmountBtc">Bet Amount BTC</label>
             <InputNumber @bind-Value="BetModel.BetAmountBtc" id="betAmountBtc" class="form-control form-control-sm" />
         </div>
     </div>
-    <div class="form-container" style="display: flex; flex-wrap: wrap; gap: 10px; align-items: center;border:dashed 1px green">
-        <div class="form-group" style="width: 10%;">
+
+    <br />
+    <br />
+
+    <div class="form-container" style="display: inline-flex; flex-wrap: wrap; gap: 10px; align-items: center; border: dashed 1px black;width:auto">
+        <div class="form-group" style="width:auto;">
             <label for="ethPriceExpireBet">ETH Price Expire Bet</label>
             <InputNumber @bind-Value="BetModel.EthPriceExpireBet" id="ethPriceExpireBet" class="form-control form-control-sm" />
         </div>
 
-        <div class="form-group" style="width: 10%;">
+        <div class="form-group" style="width: auto;">
             <label for="hitDateETH">Hit Date ETH</label>
             <InputDate @bind-Value="BetModel.HitDateETH" id="hitDateETH" class="form-control form-control-sm" />
         </div>
-        <div class="form-group" style="width: 10%;">
+        <div class="form-group" style="width: auto;">
             <label for="betAmountETH">Bet Amount ETH</label>
             <InputNumber @bind-Value="BetModel.BetAmountETH" id="betAmountETH" class="form-control form-control-sm" />
         </div>
     </div>
-
-  <button type="submit" class="btn btn-primary btn-sm">Place Bet</button>
+    <br /><br />
+    <button type="submit" class="btn btn-primary btn-sm">Place Bet</button>
 
 
 </EditForm>
@@ -68,6 +70,10 @@
         {
             user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
             //  wallets = await Http.GetFromJsonAsync<List<WalletDTO>>($"https://localhost:7258/api/Wallet/WalletsL/{user2}");
+
+      
+            // await Http.PutAsJsonAsync<Bet>($"/Bet/GetTheBet/ BetModel);
+
 
 
         }
