--- a/ArsaRExCH.Client/Pages/ForceBet.razor
+++ b/ArsaRExCH.Client/Pages/ForceBet.razor
@@ -72,7 +72,7 @@
             //  wallets = await Http.GetFromJsonAsync<List<WalletDTO>>($"https://localhost:7258/api/Wallet/WalletsL/{user2}");
 
       
-            // await Http.PutAsJsonAsync<Bet>($"/Bet/GetTheBet/ BetModel);
+            // await Http.PostAsJsonAsync<Bet>($"/Bet/GetTheBet/" ,BetModel);
 
 
 
