--- a/ArsaRExCH/Components/Pages/BetComponent.razor
+++ b/ArsaRExCH/Components/Pages/BetComponent.razor
@@ -78,10 +78,15 @@
     public async Task HandleValidSubmit()
     {
         //BetModel.CompletedTime = something when bet expires is null for begin
-        // await Http.PostAsJsonAsync<Bet>($"/Bet/GetBet", BetModel3);
+        // await Http.PostAsJsonAsync<Bet>($"/Bet/GetBet", BetModel);
         BetModel.IsBetActive = true;
         BetModel.ISDeleted = false;
         BetModel.UserIdSec = user2;
+        BetModel.BtcPriceNow = 11200000;//Call to database 
+        BetModel.EthPriceNow = 11200000;//Call to database
+        BetModel.OpendBetAtricle = DateTime.Now; //init at placing bet sample
+        BetModel.WiningAmount = null;
+
         await _interface.SaveBet(BetModel);
     }
 }
