Ef price Component in one btc added

--- a/ArsaRExCH/Components/Pages/BetComponent.razor
+++ b/ArsaRExCH/Components/Pages/BetComponent.razor
@@ -11,7 +11,7 @@
 @using ArsaRExCH.Model
 
 
-<div style="background-color:yellow;width:100%;height:100px"> <BtcPrice></BtcPrice>- Ethererum Price components</div>
+<div style="background-color:yellow;width:100%;height:100px"> <BtcPrice></BtcPrice></div>
 <br />
 
 <hr />
