--- a/ArsaRExCH/Components/Pages/BtcPrice.razor
+++ b/ArsaRExCH/Components/Pages/BtcPrice.razor
@@ -37,7 +37,7 @@
             var ethPriceData = JsonSerializer.Deserialize<CryptoPriceResponse>(ethResponse);
             ethPrice = decimal.Parse(ethPriceData.Price);
 
-            InvokeAsync(StateHasChanged); // Notify the UI to re-render
+           await InvokeAsync(StateHasChanged); // Notify the UI to re-render
         }
         catch (Exception ex)
         {
