AMount wallets Sample

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
         <div class="top-row px-4">
             <a href="wallets">Wallet </a>
             <a href="AddMoneyBank">Deposit Money</a>
-           
+            <a href="Bet1">Bet</a>
 
 
         </div>
