Interface method - wallet balance btc added

--- a/ArsaRExCH/Components/Pages/BetComponent.razor
+++ b/ArsaRExCH/Components/Pages/BetComponent.razor
@@ -10,7 +10,7 @@
 @inject ArsaRExCH.Interface.BetInterface _interface
 @using ArsaRExCH.Model
 
-
+<BtcWalletAmountExctractor ></BtcWalletAmountExctractor>
 <BtcPrice></BtcPrice>
 <br />
 
