Betcomponent some changes

--- a/ArsaRExCH/Components/Account/Pages/Register.razor
+++ b/ArsaRExCH/Components/Account/Pages/Register.razor
@@ -16,7 +16,7 @@
 @inject ILogger<Register> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
-@inject ArsaRExCH.Interface.WalletInterface _face
+@inject ArsaRExCH.Interface.WalletInterface<double> _face
 <PageTitle>Register</PageTitle>
 
 
