--- a/ArsaRExCH/Components/Pages/BtcWalletAmountExctractor.razor
+++ b/ArsaRExCH/Components/Pages/BtcWalletAmountExctractor.razor
@@ -6,7 +6,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @using System.Text.Json
-@inject ArsaRExCH.Interface.WalletInterface _interface
+@inject ArsaRExCH.Interface.WalletInterface<double> _interface
 @using ArsaRExCH.DTOs
 <div class="wallet-container">
     <div class="wallet">
