--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -6,7 +6,7 @@
 @using System.Security.Claims
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
-@inject ArsaRExCH.Interface.WalletInterface _face
+@inject ArsaRExCH.Interface.WalletInterface<double> _face
 
 
 <h3>Welcome To ArsaRExchange & Casino </h3>
