--- a/ArsaRExCH/Components/Pages/Wallets.razor
+++ b/ArsaRExCH/Components/Pages/Wallets.razor
@@ -7,7 +7,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @using System.Text.Json
-@inject ArsaRExCH.Interface.WalletInterface _interface
+@inject ArsaRExCH.Interface.WalletInterface<double> _interface
 @using ArsaRExCH.DTOs
  
 @if (wallets == null)
